--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -75,11 +75,13 @@
 
 @media only screen and (max-width: 768px) {
   .home .grid {
+    margin: 20px;
     display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 30px 26px;
   margin-top: -50px;
   position: relative;
   margin-bottom: 60px;
+  
   }
 }
